fix wrong font url

--- a/assets/fonts/stylesheet.css
+++ b/assets/fonts/stylesheet.css
@@ -164,8 +164,8 @@
 /* ========Font Lato=======  */
 @font-face {
     font-family: "Lato";
-    src: url("lato/Lato-Bold.woff2") format("woff2"),
-        url("lato/Lato-Bold.woff") format("woff");
+    src: url("Lato/Lato-Bold.woff2") format("woff2"),
+        url("Lato/Lato-Bold.woff") format("woff");
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -173,8 +173,8 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("lato/Lato-Black.woff2") format("woff2"),
-        url("lato/Lato-Black.woff") format("woff");
+    src: url("Lato/Lato-Black.woff2") format("woff2"),
+        url("Lato/Lato-Black.woff") format("woff");
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -182,8 +182,8 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("lato/Lato-BlackItalic.woff2") format("woff2"),
-        url("lato/Lato-BlackItalic.woff") format("woff");
+    src: url("Lato/Lato-BlackItalic.woff2") format("woff2"),
+        url("Lato/Lato-BlackItalic.woff") format("woff");
     font-weight: 900;
     font-style: italic;
     font-display: swap;
@@ -191,8 +191,8 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("lato/Lato-BoldItalic.woff2") format("woff2"),
-        url("lato/Lato-BoldItalic.woff") format("woff");
+    src: url("Lato/Lato-BoldItalic.woff2") format("woff2"),
+        url("Lato/Lato-BoldItalic.woff") format("woff");
     font-weight: bold;
     font-style: italic;
     font-display: swap;
@@ -200,8 +200,8 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("lato/Lato-Italic.woff2") format("woff2"),
-        url("lato/Lato-Italic.woff") format("woff");
+    src: url("Lato/Lato-Italic.woff2") format("woff2"),
+        url("Lato/Lato-Italic.woff") format("woff");
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -209,8 +209,8 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("lato/Lato-LightItalic.woff2") format("woff2"),
-        url("lato/Lato-LightItalic.woff") format("woff");
+    src: url("Lato/Lato-LightItalic.woff2") format("woff2"),
+        url("Lato/Lato-LightItalic.woff") format("woff");
     font-weight: 300;
     font-style: italic;
     font-display: swap;
@@ -218,8 +218,8 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("lato/Lato-Light.woff2") format("woff2"),
-        url("lato/Lato-Light.woff") format("woff");
+    src: url("Lato/Lato-Light.woff2") format("woff2"),
+        url("Lato/Lato-Light.woff") format("woff");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -227,8 +227,8 @@
 
 @font-face {
     font-family: "Lato";
-    src: url("lato/Lato-Regular.woff2") format("woff2"),
-        url("lato/Lato-Regular.woff") format("woff");
+    src: url("Lato/Lato-Regular.woff2") format("woff2"),
+        url("Lato/Lato-Regular.woff") format("woff");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -236,8 +236,8 @@
 
 @font-face {
     font-family: "Lato Hairline";
-    src: url("lato/Lato-Hairline.woff2") format("woff2"),
-        url("lato/Lato-Hairline.woff") format("woff");
+    src: url("Lato/Lato-Hairline.woff2") format("woff2"),
+        url("Lato/Lato-Hairline.woff") format("woff");
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -245,8 +245,8 @@
 
 @font-face {
     font-family: "Lato Hairline";
-    src: url("lato/Lato-HairlineItalic.woff2") format("woff2"),
-        url("lato/Lato-HairlineItalic.woff") format("woff");
+    src: url("Lato/Lato-HairlineItalic.woff2") format("woff2"),
+        url("Lato/Lato-HairlineItalic.woff") format("woff");
     font-weight: 300;
     font-style: italic;
     font-display: swap;
